fixing the z-index issue for the slider btns, and removing social links from side menu

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -11,7 +11,7 @@
   height: 6rem;
   width: 100%;
   background: $primary_700;
-  z-index: 1;
+  z-index: 20;
   transition: 300ms ease-in-out all;
   // border: 2px solid rgb(166, 255, 0) !important;
 }
